--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,5 @@
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://10.0.0.236:5000"
 }
