--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "string-similarity": "^4.0.4",
     "validator": "^13.6.0"
   }
