upload profile picture and change

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "socket.io": "^4.1.2",
     "string-similarity": "^4.0.4",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
