--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.32",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "socket.io": "^4.1.2",
