--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Patrick Igiraneza",
   "license": "ISC",
   "dependencies": {
+    "@rodrigogs/mysql-events": "^0.6.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.32",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "socket.io": "^4.1.2",
     "string-similarity": "^4.0.4",
